--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,40 +1,41 @@
-.client-titel {
+.clients {
+    padding: 94px 0;
+}
+.clients__titel {
     font-size: 36px;
     line-height: 1.16;
     font-weight: 700;
     color: var(--text-dark);
     text-align: center;
 }
-
-.client-wrapper {
+.clients__list {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style: none;
     column-gap: 30px;
     margin-top: 50px;
-    &.__icon-list {
-        border: 1px solid var(--icon-team);
-        border-radius: 4px;
-        padding: 16px 32px;
-        cursor: pointer;
-        transition-property: border;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        &    .__icon-client {
-            fill: var(--icon-team);
-            transition-property: fill;
-            transition-duration: 250ms;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    }
-
+}
+.clients__logo {
+    border: 1px solid var(--icon-team);
+    border-radius: 4px;
+    padding: 16px 32px;
+    cursor: pointer;
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__logo-icon {
+    fill: var(--icon-team);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.__icon-list:hover svg {
+.clients__logo:hover svg {
     fill: var(--text-blue);
 }
 
-.__icon-list:hover {
+.clients__logo:hover {
     border: 1px solid var(--text-blue);
 }
