--- a/sass/components/_list-team.scss
+++ b/sass/components/_list-team.scss
@@ -1,31 +1,31 @@
-.section-list-team {
+.team {
     background-color: $lighterBg;
+    padding: 94px 0;
 }
-.list-team__titel {
+.team__titel {
     font-size: 36px;
     line-height: 1.16;
     font-weight: 700;
     color: $textDark;
     text-align: center;
     padding-bottom: 50px;
-    &.__wrapper {
-        display: flex;
-        column-gap: 30px; 
-        justify-content: center;
-        list-style: none;
-    }
-    &.__wrapper-content {
-        display: flex;
-        flex-direction: column;
-        box-shadow: 0px 1px 3px $port3Bs, 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        text-align: center;
-        padding-bottom: 30px;
-        background-color: $white;
-    }
 }
-
-.__--worker {
+.team__list {
+    display: flex;
+    column-gap: 30px; 
+    justify-content: center;
+    list-style: none;
+}
+.team__member {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 1px 3px $port3Bs, 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+    padding-bottom: 30px;
+    background-color: $white;
+}
+.team__member-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -33,23 +33,23 @@
     padding-top: 30px;
     padding-bottom: 10px;
 }
-.__--position {
+.team__member-position {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
     color: $lightGrey;
 }
-.__--icon {
+.team__member-social-icon {
     fill: $iconTeam;
 }
-.__wrapper-content__team-icon {
+.team__member-social-list {
     display: flex;
     list-style: none;
     justify-content: center;
     column-gap: 10px;
     margin-top: 16px;
 }
-.__list-icon {
+.team__member-social-link {
     border-radius: 50%;
     padding: 12px;
     display: flex;
@@ -59,9 +59,9 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
 }
-.__list-icon:hover {
+.team__member-social-link:hover {
     background-color: $brandBlue;
 }
-.__--icon:hover {
+.team__member-social-icon:hover {
     fill: $white;
 }
