--- a/sass/components/_usp-block.scss
+++ b/sass/components/_usp-block.scss
@@ -1,17 +1,20 @@
-.usp-blocks__titel {
+.usps {
+    padding: 94px 0;
+}
+.usp__list-titel {
     font-size: 14px;
     line-height: 1.14;
     font-weight: 700;
     color: $textDark;
     padding-bottom: 10px;
 }
-.__content {
+.usps__list-content {
     font-size: 14px;
     line-height: 1.71;
     font-weight: 400;
     color: $lightGrey;
 }
-.__wrapper {
+.usps__icon-wrapper {
     background-color: $lighterBg;
     width: 100%;
     display: flex;
