--- a/sass/components/_site-navigation.scss
+++ b/sass/components/_site-navigation.scss
@@ -1,88 +1,91 @@
 .header {
     border-bottom: 1px solid $headerBorder;
     &.header-container {
-        display: flex;
-        align-items: center;
-        padding: 24px 15px 25px;
+      display: flex;
+      align-items: center;
+      padding: 24px 15px 25px;
     }
-}
-.header__site-nav {
-    display: flex;
-    align-items: center;
-}
-.header__container-logo {
-    font-family: 'Raleway';
-    font-size: 26px;
-    text-decoration: none;
-    color: $logoBlack;
-    cursor: pointer;
-    line-height: 1.19;
-    margin-right: 93px; 
-    &.header__container-logo--text {
+  
+    &__site-nav {
+      display: flex;
+      align-items: center;
+    }
+    &__container-logo {
+      font-family: "Raleway";
+      font-size: 26px;
+      text-decoration: none;
+      color: $logoBlack;
+      cursor: pointer;
+      line-height: 1.19;
+      margin-right: 93px;
+      &--text {
         color: $brandBlue;
         margin-right: 0;
+      }
     }
-}
-
-.header__contact-links {
-    display: flex;
-    align-items: center;
-}
-
-.header__site-nav {
-    list-style: none;
-    column-gap: 46px;
-}
-.header__site-nav-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    color: $textDark;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);   
-}
-.header__site-nav-link:hover {
-    color: $brandBlue;
-}
-.header__site-nav-link:focus {
-    color: $brandBlue;
-}
-.header__site-nav-link--underline {
-    position: relative;
-}
-
-.header__site-nav-link--underline::after {
-   content: "";
-   display: block;
-   position: absolute;
-   bottom: -34px;
-   width: 100%;
-   height: 4px;
-   border-radius: 2px;
-   background-color: $brandBlue;
-}
-.header__contact-links {
-    display: flex;
-    margin-left: auto;
-    column-gap: 50px;
-}
-.header__contact-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    color: $lightGrey;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__contact-link:hover {
-    color: $brandBlue;
-}
-.header__contact-link-icon{
-    fill: $lightGrey;
-    margin-right: 10px;
-}
-.header__contact-link:hover svg {
-    fill: $brandBlue;
-}
+    &__contacts-links {
+      display: flex;
+      align-items: center;
+    }
+    &__site-nav {
+      list-style: none;
+      column-gap: 46px;
+    }
+    &__site-nav-link {
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 14px;
+      color: $textDark;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+      &:focus,
+      &:hover {
+        color: $brandBlue;
+      }
+  
+      &--underline {
+        position: relative;
+      }
+  
+      &--underline::after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: -34px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: $brandBlue;
+      }
+    }
+    &__contact-links {
+      display: flex;
+      margin-left: auto;
+      column-gap: 50px;
+    }
+    &__contact-link {
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 14px;
+      color: $lightGrey;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+      &:focus,
+      &:hover {
+        color: $brandBlue;
+  
+        svg {
+          fill: $brandBlue;
+        }
+      }
+  
+      &-icon {
+        fill: $lightGrey;
+        margin-right: 10px;
+      }
+    }
+  }
