--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -6,11 +6,11 @@
     column-gap: 8px;
     margin-bottom: 50px;
     background-color: $white;
-    &.filters__list-item {
+    &-item {
         background-color: $lighterBg;
         border-radius: 4px;
     }
-    &.filters__list-btn{
+    &-btn{
         font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
@@ -24,17 +24,17 @@
         transition-property: background-color, color, box-shadow, border-radius;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover {
+            background-color: $brandBlue;
+            color: $white;
+            border-radius: 4px;
+            box-shadow: 0px 3px 1px $portBs, 0px 1px 2px $port2Bs, 0px 2px 2px $port3Bs;
+        }
+        &:focus {
+            background-color: $brandBlue;
+            color: $white;
+            box-shadow: 0px 3px 1px $portBs, 0px 1px 2px $port2Bs, 0px 2px 2px $port3Bs;
+            border-radius: 4px;
+        }
     }
-}
-.filters__list-btn:hover {
-    background-color: $brandBlue;
-    color: $white;
-    border-radius: 4px;
-    box-shadow: 0px 3px 1px $portBs, 0px 1px 2px $port2Bs, 0px 2px 2px $port3Bs;
-}
-.filters__list-btn:focus {
-    background-color: $brandBlue;
-    color: $white;
-    box-shadow: 0px 3px 1px $portBs, 0px 1px 2px $port2Bs, 0px 2px 2px $port3Bs;
-    border-radius: 4px;
 }
