--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -6,35 +6,35 @@
     width: 1600px;
     padding: 94px 0;
     margin: 0 auto;
-}
-.hero-section {
+    &__section {
     padding-bottom: 94px;
-}
-.hero__container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-.hero__container-titel {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    color: $white;
-    text-align: center;
-    margin: 106px 252px 0;
-}
-.hero__container-btn {
-    background-color: $brandBlue;
-    color: $white;
-    font-size: 16px;
-    line-height: 1.87;
-    cursor: pointer;
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    width: fit-content;
-    padding: 10px 40px;
-    margin-bottom: 106px;
+    }
+    &__container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    &__container-titel {
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        color: $white;
+        text-align: center;
+        margin: 106px 252px 0;
+    }
+    &__container-btn {
+        background-color: $brandBlue;
+        color: $white;
+        font-size: 16px;
+        line-height: 1.87;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        border-radius: 4px;
+        width: fit-content;
+        padding: 10px 40px;
+        margin-bottom: 106px;
+    }
 }
