--- a/sass/components/_list-team.scss
+++ b/sass/components/_list-team.scss
@@ -1,22 +1,21 @@
 .team {
     background-color: $lighterBg;
     padding: 94px 0;
-}
-.team__titel {
+    &__titel {
     font-size: 36px;
     line-height: 1.16;
     font-weight: 700;
     color: $textDark;
     text-align: center;
     padding-bottom: 50px;
-}
-.team__list {
+    }
+    &__list {
     display: flex;
     column-gap: 30px; 
     justify-content: center;
     list-style: none;
-}
-.team__member {
+    }
+    &__member {
     display: flex;
     flex-direction: column;
     box-shadow: 0px 1px 3px $port3Bs, 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -24,44 +23,46 @@
     text-align: center;
     padding-bottom: 30px;
     background-color: $white;
-}
-.team__member-name {
+    }
+    &__member-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     color: $textDark;
     padding-top: 30px;
     padding-bottom: 10px;
-}
-.team__member-position {
+    }
+    &__member-position {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
     color: $lightGrey;
-}
-.team__member-social-icon {
-    fill: $iconTeam;
-}
-.team__member-social-list {
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    column-gap: 10px;
-    margin-top: 16px;
-}
-.team__member-social-link {
-    border-radius: 50%;
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition-property: fill, background-color, opacity;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
-}
-.team__member-social-link:hover {
-    background-color: $brandBlue;
-}
-.team__member-social-icon:hover {
-    fill: $white;
+    }
+    &__member-social-list {
+        display: flex;
+        list-style: none;
+        justify-content: center;
+        column-gap: 10px;
+        margin-top: 16px;
+    }
+    &__member-social-link {
+        border-radius: 50%;
+        padding: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition-property: fill, background-color, opacity;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover {
+            background-color: $brandBlue;
+        }  
+    }
+    &__member-social-icon {
+        fill: $iconTeam;
+        &:hover {
+            fill: $white;
+        }
+    }
+
 }
