--- a/sass/components/_usp-block.scss
+++ b/sass/components/_usp-block.scss
@@ -1,24 +1,30 @@
 .usps {
     padding: 94px 0;
-}
-.usp__list-titel {
-    font-size: 14px;
-    line-height: 1.14;
-    font-weight: 700;
-    color: $textDark;
-    padding-bottom: 10px;
-}
-.usps__list-content {
-    font-size: 14px;
-    line-height: 1.71;
-    font-weight: 400;
-    color: $lightGrey;
-}
-.usps__icon-wrapper {
-    background-color: $lighterBg;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 25px 0;
-    margin-bottom: 30px;
+    &__list {
+        display: flex;
+        column-gap: 30px;
+        list-style: none;
+    }
+    &__icon-wrapper {
+        background-color: $lighterBg;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 25px 0;
+        margin-bottom: 30px;
+    }
+    &__list-titel {
+        font-size: 14px;
+        line-height: 1.14;
+        font-weight: 700;
+        color: $textDark;
+        padding-bottom: 10px;
+    }
+    &__list-content {
+        font-size: 14px;
+        line-height: 1.71;
+        font-weight: 400;
+        color: $lightGrey;
+    }
+    
 }
